# Neural-Net-Scratch-Cpp

./: .gitignore  CMakeLists.txt  README.md
include/: node.hpp
source/: CMakeLists.txt  main.cpp
